# EventLapse

./: .env.example  .gitignore  EXPERIMENTS.md  README.md  pyproject.toml  screenlog.0
configs/: experiments.yaml  generation.yaml  model_candidates.yaml  models.yaml
configs/tasks/: causal_attribution.yaml  duration_comparison.yaml  event_counting.yaml  event_frequency.yaml  future_prediction.yaml  long_term_dependency.yaml  temporal_ordering.yaml
reference_code/: bounce_ball.py  causal_chain.py  duration_compare.py  finish_line_order.py  future_sequence.py  parcel_tracker.py  pendulum_freq.py
scripts/: aggregate_results.py  check_available_models.py  generate_causal_validation.py  generate_dataset.py  make_figures.py  make_matrix_heatmaps.py  run_all_experiments.sh  run_experiment.py  run_matrix_sweep.py  smoke_test_model.py  validate_dataset.py
src/eventlapse/datasets/: natural_manifest.py  repcount.py  repcount_pairs.py
src/eventlapse/evaluation/: boundaries.py  error_taxonomy.py  exact_match.py  morse_evaluator.py  statistics.py
src/eventlapse/experiments/: capability_boundaries.py  frame_density.py  natural_transfer.py  oracle_evidence.py  prompting.py  shortcut_controls.py  trace_diagnosis.py
src/eventlapse/generation/: base.py  blinking.py  bounce_ball.py  causal_attribution.py  causal_attribution_legacy.py  duration_comparison.py  event_counting.py  event_frequency.py  future_prediction.py  long_term_dependency.py  renderer.py  state_machine.py  (+1 more)
tests/: test_causal_attribution.py  test_evaluation.py  test_generation.py  test_models.py  test_traces.py
(+27 files in other folders)
